# WeatherAPI

./: .env.template  .gitignore  README.md  pyproject.toml
weatherapi/settings/: settings.py  urls.py
weatherapi/weather/: admin.py  constants.py  exceptions.py  middleware.py  models.py  serializers.py  urls.py  utils.py
weatherapi/weather/migrations/: 0001_initial.py
weatherapi/weather/services/: __init__.py  external_api.py  weather_service.py
weatherapi/weather/tests/: __init__.py  test_api.py  test_models.py  test_services.py
weatherapi/weather/views/: __init__.py  base.py  system_views.py  weather_views.py
