[project]
name = "weatherapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.2",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "ruff>=0.11.13",
]
